--- a/textoimage.html
+++ b/textoimage.html
@@ -203,7 +203,7 @@ $(document).ready(function(){
 
 	$('#tex_result').css('display','none');
 
-	$('#tex_textarea').val('x = y^2').select();
+	$('#tex_textarea').val('\\x = y^2').select();
 
 	$('#tex_menu_alpha_text').mouseenter(function(){
 		$('.tex_menu_sub').css('display','none');
